src/gen/org/ngs/parser/NgsParser.java
// Generated from /home/src/ngspice-idea-plugin/src/main/grammars/org/ngs/parser/NgsParser.g4 by ANTLR 4.7
package org.ngs.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class NgsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NODE=1, VAL=2, KV_KEY=3, COMMA=4, HEAD_R=5, WS=6, NEWLINE=7, EQ=8, EXPR=9, 
		SUBCKT_NAME=10, PAR_L=11, PAR_R=12, BR_L=13, BR_R=14, MODEL_NAME=15, PULSE=16, 
		SIN=17, EXP=18, PWL=19, SFFM=20, AM=21, TRNOISE=22, TRRANDOM=23, EXTERNAL=24, 
		POLY=25, COMMENT=26, XA_NODE_TYPE=27, INCLUDE=28, FILENAME=29, OPTIONS=30, 
		PLOT_TYPE=31, PLOT_POINT_TYPE=32, BC=33, COMMENT_FIRSTLINEZ999=34, NL_Z999=35, 
		BC_Z999=36, COMMENT_LS_Z01=37, COMMENT_EOL_Z01=38, H_MODEL=39, H_R=40, 
		H_C=41, H_K=42, H_L=43, H_S=44, H_W=45, H_V=46, H_I=47, H_E=48, H_G=49, 
		H_F=50, H_H=51, H_A=52, H_T=53, H_O=54, H_U=55, H_Y=56, H_D=57, H_Q=58, 
		H_J=59, H_Z=60, H_M=61, H_SUBCKT=62, H_SUBCKT_TAIL=63, H_X=64, TRAN=65, 
		PRINT=66, VAL01=67, WS_Z01=68, NL_Z01=69, BC_Z01=70, VL=71, WS_Z00=72, 
		NL_Z00=73, COMMENT_EOL_Z00=74, BC_Z00=75, VAL_Z10=76, EXPR_Z10=77, COMMA_Z10=78, 
		EQ_Z10=79, PAR_L10=80, PAR_R10=81, WS_Z10=82, NL_Z10=83, COMMENT_EOL_Z10=84, 
		BC_Z10=85, VAL_Z11=86, EXPR_Z11=87, COMMA_Z11=88, EQ_Z11=89, PAR_L11=90, 
		PAR_R11=91, WS_Z11=92, NL_Z11=93, COMMENT_EOL_Z11=94, BC_Z11=95, VAL_Z12=96, 
		EXPR_Z12=97, COMMA_Z12=98, EQ_Z12=99, PAR_L12=100, PAR_R12=101, WS_Z12=102, 
		NL_Z12=103, COMMENT_EOL_Z12=104, BC_Z12=105, VAL_Z13=106, EXPR_Z13=107, 
		COMMA_Z13=108, EQ_Z13=109, PAR_L13=110, PAR_R13=111, WS_Z13=112, NL_Z13=113, 
		COMMENT_EOL_Z13=114, BC_Z13=115, VAL_Z20=116, EQ_Z20=117, WS_Z20=118, 
		NL_Z20=119, COMMENT_EOL_Z20=120, BC_Z20=121, VAL_Z30=122, WS_Z30=123, 
		NL_Z30=124, COMMENT_EOL_Z30=125, BC_Z30=126, VAL_Z40=127, EQ_Z40=128, 
		WS_Z40=129, NL_Z40=130, COMMENT_EOL_Z40=131, BC_Z40=132, PAR_L50=133, 
		PAR_R50=134, VAL_Z50=135, WS_Z50=136, NL_Z50=137, COMMENT_EOL_Z50=138, 
		BC_Z50=139, VAL_Z60=140, PAR_L60=141, PAR_R60=142, BR_L60=143, BR_R60=144, 
		WS_Z60=145, NL_Z60=146, COMMENT_EOL_Z60=147, BC_Z60=148, VAL_Z70=149, 
		WS_Z70=150, NL_Z70=151, COMMENT_EOL_Z70=152, BC_Z70=153, VAL_Z80=154, 
		WS_Z80=155, NL_Z80=156, COMMENT_EOL_Z80=157, BC_Z80=158, VAL_Z90=159, 
		PAR_L90=160, PAR_R90=161, COMMA_Z90=162, WS_Z90=163, NL_Z90=164, COMMENT_EOL_Z90=165, 
		BC_Z90=166, WS_Z100=167, NL_Z100=168, FILENAME_Z100=169, BC_Z100=170;
	public static final int
		RULE_root = 0, RULE_circuit = 1, RULE_line = 2, RULE_tran_entry = 3, RULE_print_entry = 4, 
		RULE_include_entry = 5, RULE_options_entry = 6, RULE_print_node = 7, RULE_print_node_v = 8, 
		RULE_print_node_i = 9, RULE_d_entry = 10, RULE_q_entry = 11, RULE_j_entry = 12, 
		RULE_z_entry = 13, RULE_m_entry = 14, RULE_t_entry = 15, RULE_o_entry = 16, 
		RULE_u_entry = 17, RULE_y_entry = 18, RULE_s_entry = 19, RULE_w_entry = 20, 
		RULE_r_entry = 21, RULE_c_entry = 22, RULE_k_entry = 23, RULE_l_entry = 24, 
		RULE_i_entry = 25, RULE_v_entry = 26, RULE_v_val = 27, RULE_v_tran = 28, 
		RULE_e_entry = 29, RULE_e_poly = 30, RULE_e_simple = 31, RULE_g_entry = 32, 
		RULE_f_entry = 33, RULE_h_entry = 34, RULE_f_poly = 35, RULE_f_simple = 36, 
		RULE_x_entry = 37, RULE_kv_entry = 38, RULE_kvpair = 39, RULE_subckt = 40, 
		RULE_subckt_head_entry = 41, RULE_subckt_tail_entry = 42, RULE_a_entry = 43, 
		RULE_a_node = 44, RULE_a_arr = 45, RULE_a_val = 46, RULE_a_val_typed_node = 47, 
		RULE_a_val_typed_v = 48, RULE_model_entry = 49, RULE_eol = 50, RULE_ffff = 51;
	public static final String[] ruleNames = {
		"root", "circuit", "line", "tran_entry", "print_entry", "include_entry", 
		"options_entry", "print_node", "print_node_v", "print_node_i", "d_entry", 
		"q_entry", "j_entry", "z_entry", "m_entry", "t_entry", "o_entry", "u_entry", 
		"y_entry", "s_entry", "w_entry", "r_entry", "c_entry", "k_entry", "l_entry", 
		"i_entry", "v_entry", "v_val", "v_tran", "e_entry", "e_poly", "e_simple", 
		"g_entry", "f_entry", "h_entry", "f_poly", "f_simple", "x_entry", "kv_entry", 
		"kvpair", "subckt", "subckt_head_entry", "subckt_tail_entry", "a_entry", 
		"a_node", "a_arr", "a_val", "a_val_typed_node", "a_val_typed_v", "model_entry", 
		"eol", "ffff"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "'PULSE'", "'SIN'", "'EXP'", "'PWL'", "'SFFM'", 
		"'AM'", "'TRNOISE'", "'TRRANDOM'", "'EXTERNAL'", "'POLY'", "'COMMENT'", 
		"'%v'", "'.INCLUDE'", "'FILENAME'", "'.OPTIONS'", "'TRAN'", "'V'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "NODE", "VAL", "KV_KEY", "COMMA", "HEAD_R", "WS", "NEWLINE", "EQ", 
		"EXPR", "SUBCKT_NAME", "PAR_L", "PAR_R", "BR_L", "BR_R", "MODEL_NAME", 
		"PULSE", "SIN", "EXP", "PWL", "SFFM", "AM", "TRNOISE", "TRRANDOM", "EXTERNAL", 
		"POLY", "COMMENT", "XA_NODE_TYPE", "INCLUDE", "FILENAME", "OPTIONS", "PLOT_TYPE", 
		"PLOT_POINT_TYPE", "BC", "COMMENT_FIRSTLINEZ999", "NL_Z999", "BC_Z999", 
		"COMMENT_LS_Z01", "COMMENT_EOL_Z01", "H_MODEL", "H_R", "H_C", "H_K", "H_L", 
		"H_S", "H_W", "H_V", "H_I", "H_E", "H_G", "H_F", "H_H", "H_A", "H_T", 
		"H_O", "H_U", "H_Y", "H_D", "H_Q", "H_J", "H_Z", "H_M", "H_SUBCKT", "H_SUBCKT_TAIL", 
		"H_X", "TRAN", "PRINT", "VAL01", "WS_Z01", "NL_Z01", "BC_Z01", "VL", "WS_Z00", 
		"NL_Z00", "COMMENT_EOL_Z00", "BC_Z00", "VAL_Z10", "EXPR_Z10", "COMMA_Z10", 
		"EQ_Z10", "PAR_L10", "PAR_R10", "WS_Z10", "NL_Z10", "COMMENT_EOL_Z10", 
		"BC_Z10", "VAL_Z11", "EXPR_Z11", "COMMA_Z11", "EQ_Z11", "PAR_L11", "PAR_R11", 
		"WS_Z11", "NL_Z11", "COMMENT_EOL_Z11", "BC_Z11", "VAL_Z12", "EXPR_Z12", 
		"COMMA_Z12", "EQ_Z12", "PAR_L12", "PAR_R12", "WS_Z12", "NL_Z12", "COMMENT_EOL_Z12", 
		"BC_Z12", "VAL_Z13", "EXPR_Z13", "COMMA_Z13", "EQ_Z13", "PAR_L13", "PAR_R13", 
		"WS_Z13", "NL_Z13", "COMMENT_EOL_Z13", "BC_Z13", "VAL_Z20", "EQ_Z20", 
		"WS_Z20", "NL_Z20", "COMMENT_EOL_Z20", "BC_Z20", "VAL_Z30", "WS_Z30", 
		"NL_Z30", "COMMENT_EOL_Z30", "BC_Z30", "VAL_Z40", "EQ_Z40", "WS_Z40", 
		"NL_Z40", "COMMENT_EOL_Z40", "BC_Z40", "PAR_L50", "PAR_R50", "VAL_Z50", 
		"WS_Z50", "NL_Z50", "COMMENT_EOL_Z50", "BC_Z50", "VAL_Z60", "PAR_L60", 
		"PAR_R60", "BR_L60", "BR_R60", "WS_Z60", "NL_Z60", "COMMENT_EOL_Z60", 
		"BC_Z60", "VAL_Z70", "WS_Z70", "NL_Z70", "COMMENT_EOL_Z70", "BC_Z70", 
		"VAL_Z80", "WS_Z80", "NL_Z80", "COMMENT_EOL_Z80", "BC_Z80", "VAL_Z90", 
		"PAR_L90", "PAR_R90", "COMMA_Z90", "WS_Z90", "NL_Z90", "COMMENT_EOL_Z90", 
		"BC_Z90", "WS_Z100", "NL_Z100", "FILENAME_Z100", "BC_Z100"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "NgsParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public NgsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RootContext extends ParserRuleContext {
		public CircuitContext circuit() {
			return getRuleContext(CircuitContext.class,0);
		}
		public TerminalNode EOF() { return getToken(NgsParser.EOF, 0); }
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NgsParserListener ) ((NgsParserListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NgsParserListener ) ((NgsParserListener)listener).exitRoot(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			circuit();
			setState(105);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CircuitContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(NgsParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(NgsParser.NEWLINE, i);
		}
		public List<EolContext> eol() {
			return getRuleContexts(EolContext.class);
		}
		public EolContext eol(int i) {
			return getRuleContext(EolContext.class,i);
		}
		public List<SubcktContext> subckt() {
			return getRuleContexts(SubcktContext.class);
		}
		public SubcktContext subckt(int i) {
			return getRuleContext(SubcktContext.class,i);
		}
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public CircuitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_circuit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NgsParserListener ) ((NgsParserListener)listener).enterCircuit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NgsParserListener ) ((NgsParserListener)listener).exitCircuit(this);
		}
	}

	public final CircuitContext circuit() throws RecognitionException {
		CircuitContext _localctx = new CircuitContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_circuit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(114);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case INCLUDE:
				case OPTIONS:
				case H_MODEL:
				case H_R:
				case H_C:
				case H_K:
				case H_L:
				case H_S:
				case H_W:
				case H_V:
				case H_I:
				case H_E:
				case H_G:
				case H_F:
				case H_H:
				case H_A:
				case H_T:
				case H_O:
				case H_U:
				case H_Y:
				case H_D:
				case H_Q:
				case H_J:
				case H_Z:
				case H_M:
				case H_SUBCKT:
				case H_X:
				case TRAN:
				case PRINT:
					{
					{
					setState(109);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case H_SUBCKT:
						{
						setState(107);
						subckt();
						}
						break;
					case INCLUDE:
					case OPTIONS:
					case H_MODEL:
					case H_R:
					case H_C:
					case H_K:
					case H_L:
					case H_S:
					case H_W:
					case H_V:
					case H_I:
					case H_E:
					case H_G:
					case H_F:
					case H_H:
					case H_A:
					case H_T:
					case H_O:
					case H_U:
					case H_Y:
					case H_D:
					case H_Q:
					case H_J:
					case H_Z:
					case H_M:
					case H_X:
					case TRAN:
					case PRINT:
						{
						setState(108);
						line();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(111);
					eol();
					}
					}
					break;
				case NEWLINE:
					{
					setState(113);
					match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(116); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((((_la - 7)) & ~0x3f) == 0 && ((1L << (_la - 7)) & ((1L << (NEWLINE - 7)) | (1L << (INCLUDE - 7)) | (1L << (OPTIONS - 7)) | (1L << (H_MODEL - 7)) | (1L << (H_R - 7)) | (1L << (H_C - 7)) | (1L << (H_K - 7)) | (1L << (H_L - 7)) | (1L << (H_S - 7)) | (1L << (H_W - 7)) | (1L << (H_V - 7)) | (1L << (H_I - 7)) | (1L << (H_E - 7)) | (1L << (H_G - 7)) | (1L << (H_F - 7)) | (1L << (H_H - 7)) | (1L << (H_A - 7)) | (1L << (H_T - 7)) | (1L << (H_O - 7)) | (1L << (H_U - 7)) | (1L << (H_Y - 7)) | (1L << (H_D - 7)) | (1L << (H_Q - 7)) | (1L << (H_J - 7)) | (1L << (H_Z - 7)) | (1L << (H_M - 7)) | (1L << (H_SUBCKT - 7)) | (1L << (H_X - 7)) | (1L << (TRAN - 7)) | (1L << (PRINT - 7)))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public R_entryContext r_entry() {
			return getRuleContext(R_entryContext.class,0);
		}
		public C_entryContext c_entry() {
			return getRuleContext(C_entryContext.class,0);
		}
		public L_entryContext l_entry() {
			return getRuleContext(L_entryContext.class,0);
		}
		public V_entryContext v_entry() {
			return getRuleContext(V_entryContext.class,0);
		}
		public I_entryContext i_entry() {
			return getRuleContext(I_entryContext.class,0);
		}
		public E_entryContext e_entry() {
			return getRuleContext(E_entryContext.class,0);
		}
		public G_entryContext g_entry() {
			return getRuleContext(G_entryContext.class,0);
		}
		public F_entryContext f_entry() {
			return getRuleContext(F_entryContext.class,0);
		}
		public H_entryContext h_entry() {
			return getRuleContext(H_entryContext.class,0);
		}
		public X_entryContext x_entry() {
			return getRuleContext(X_entryContext.class,0);
		}
		public A_entryContext a_entry() {
			return getRuleContext(A_entryContext.class,0);
		}
		public Model_entryContext model_entry() {
			return getRuleContext(Model_entryContext.class,0);
		}
		public K_entryContext k_entry() {
			return getRuleContext(K_entryContext.class,0);
		}
		public S_entryContext s_entry() {
			return getRuleContext(S_entryContext.class,0);
		}
		public W_entryContext w_entry() {
			return getRuleContext(W_entryContext.class,0);
		}
		public T_entryContext t_entry() {
			return getRuleContext(T_entryContext.class,0);
		}
		public O_entryContext o_entry() {
			return getRuleContext(O_entryContext.class,0);
		}
		public U_entryContext u_entry() {
			return getRuleContext(U_entryContext.class,0);
		}
		public Y_entryContext y_entry() {
			return getRuleContext(Y_entryContext.class,0);
		}
		public D_entryContext d_entry() {
			return getRuleContext(D_entryContext.class,0);
		}
		public Q_entryContext q_entry() {
			return getRuleContext(Q_entryContext.class,0);
		}
		public J_entryContext j_entry() {
			return getRuleContext(J_entryContext.class,0);
		}
		public Z_entryContext z_entry() {
			return getRuleContext(Z_entryContext.class,0);
		}
		public M_entryContext m_entry() {
			return getRuleContext(M_entryContext.class,0);
		}
		public Tran_entryContext tran_entry() {
			return getRuleContext(Tran_entryContext.class,0);
		}
		public Print_entryContext print_entry() {
			return getRuleContext(Print_entryContext.class,0);
		}
		public Include_entryContext include_entry() {
			return getRuleContext(Include_entryContext.class,0);
		}
		public Options_entryContext options_entry() {
			return getRuleContext(Options_entryContext.class,0);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NgsParserListener ) ((NgsParserListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NgsParserListener ) ((NgsParserListener)listener).exitLine(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_line);
		try {
			setState(146);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case H_R:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				r_entry();
				}
				break;
			case H_C:
				enterOuterAlt(_localctx, 2);
				{
				setState(119);
				c_entry();
				}
				break;
			case H_L:
				enterOuterAlt(_localctx, 3);
				{
				setState(120);
				l_entry();
				}
				break;
			case H_V:
				enterOuterAlt(_localctx, 4);
				{
				setState(121);
				v_entry();
				}
				break;
			case H_I:
				enterOuterAlt(_localctx, 5);
				{
				setState(122);
				i_entry();
				}
				break;
			case H_E:
				enterOuterAlt(_localctx, 6);
				{
				setState(123);
				e_entry();
				}
				break;
			case H_G:
				enterOuterAlt(_localctx, 7);
				{
				setState(124);
				g_entry();
				}
				break;
			case H_F:
				enterOuterAlt(_localctx, 8);
				{
				setState(125);
				f_entry();
				}
				break;
			case H_H:
				enterOuterAlt(_localctx, 9);
				{
				setState(126);
				h_entry();
				}
				break;
			case H_X:
				enterOuterAlt(_localctx, 10);
				{
				setState(127);
				x_entry();
				}
				break;
			case H_A:
				enterOuterAlt(_localctx, 11);
				{
				setState(128);
				a_entry();
				}
				break;
			case H_MODEL:
				enterOuterAlt(_localctx, 12);
				{
				setState(129);
				model_entry();
				}
				break;
			case H_K:
				enterOuterAlt(_localctx, 13);
				{
				setState(130);
				k_entry();
				}
				break;
			case H_S:
				enterOuterAlt(_localctx, 14);
				{
				setState(131);
				s_entry();
				}
				break;
			case H_W:
				enterOuterAlt(_localctx, 15);
				{
				setState(132);
				w_entry();
				}
				break;
			case H_T:
				enterOuterAlt(_localctx, 16);
				{
				setState(133);
				t_entry();
				}
				break;
			case H_O:
				enterOuterAlt(_localctx, 17);
				{
				setState(134);
				o_entry();
				}
				break;
			case H_U:
				enterOuterAlt(_localctx, 18);
				{
				setState(135);
				u_entry();
				}
				break;
			case H_Y:
				enterOuterAlt(_localctx, 19);
				{
				setState(136);
				y_entry();
				}
				break;
			case H_D:
				enterOuterAlt(_localctx, 20);
				{
				setState(137);
				d_entry();
				}
				break;
			case H_Q:
				enterOuterAlt(_localctx, 21);
				{
				setState(138);
				q_entry();
				}
				break;
			case H_J:
				enterOuterAlt(_localctx, 22);
				{
				setState(139);
				j_entry();
				}
				break;
			case H_Z:
				enterOuterAlt(_localctx, 23);
				{
				setState(140);
				z_entry();
				}
				break;
			case H_M:
				enterOuterAlt(_localctx, 24);
				{
				setState(141);
				m_entry();
				}
				break;
			case TRAN:
				enterOuterAlt(_localctx, 25);
				{
				setState(142);
				tran_entry();
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 26);
				{
				setState(143);
				print_entry();
				}
				break;
			case INCLUDE:
				enterOuterAlt(_localctx, 27);
				{
				setState(144);
				include_entry();
				}
				break;
			case OPTIONS:
				enterOuterAlt(_localctx, 28);
				{
				setState(145);
				options_entry();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tran_entryContext extends ParserRuleContext {
		public TerminalNode TRAN() { return getToken(NgsParser.TRAN, 0); }
		public List<TerminalNode> VAL() { return getTokens(NgsParser.VAL); }
		public TerminalNode VAL(int i) {
			return getToken(NgsParser.VAL, i);
		}
		public Tran_entryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tran_entry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NgsParserListener ) ((NgsParserListener)listener).enterTran_entry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NgsParserListener ) ((NgsParserListener)listener).exitTran_entry(this);
		}
	}

	public final Tran_entryContext tran_entry() throws RecognitionException {
		Tran_entryContext _localctx = new Tran_entryContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tran_entry);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(TRAN);
			setState(149);
			match(VAL);
			setState(150);
			match(VAL);
			setState(155);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(151);
				match(VAL);
				setState(153);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(152);
					match(VAL);
					}
					break;
				}
				}
				break;
			}
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAL) {
				{
				setState(157);
				match(VAL);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Print_entryContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(NgsParser.PRINT, 0); }
		public TerminalNode PLOT_TYPE() { return getToken(NgsParser.PLOT_TYPE, 0); }
		public List<Print_nodeContext> print_node() {
			return getRuleContexts(Print_nodeContext.class);
		}
		public Print_nodeContext print_node(int i) {
			return getRuleContext(Print_nodeContext.class,i);
		}
		public Print_entryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print_entry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NgsParserListener ) ((NgsParserListener)listener).enterPrint_entry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NgsParserListener ) ((NgsParserListener)listener).exitPrint_entry(this);
		}
	}

	public final Print_entryContext print_entry() throws RecognitionException {
		Print_entryContext _localctx = new Print_entryContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_print_entry);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(PRINT);
			setState(161);
			match(PLOT_TYPE);
			setState(163); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(162);
				print_node();
				}
				}
				setState(165); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==PAR_L || _la==PLOT_POINT_TYPE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Include_entryContext extends ParserRuleContext {
		public TerminalNode INCLUDE() { return getToken(NgsParser.INCLUDE, 0); }
		public TerminalNode FILENAME() { return getToken(NgsParser.FILENAME, 0); }
		public Include_entryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include_entry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NgsParserListener ) ((NgsParserListener)listener).enterInclude_entry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NgsParserListener ) ((NgsParserListener)listener).exitInclude_entry(this);
		}
	}

	public final Include_entryContext include_entry() throws RecognitionException {
		Include_entryContext _localctx = new Include_entryContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_include_entry);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			match(INCLUDE);
			setState(168);
			match(FILENAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
